--- a/style.css
+++ b/style.css
@@ -1,71 +1,223 @@
-*{
-   margin:0%;
-   padding:0%;
-   box-sizing: border-box;
-   font-family: Helvetica;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  font-family: Helvetica;
 }
 
-html,body{
-   height: 100%;
-   width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
-#main{
-    height: 100vh;
-    width: 100%;
+body{
+    background-color: #dadada;
 }
-#page1{
-    height: 100vh;
-    width: 100%;
+#main {
+  height: 100vh;
+  width: 100%;
+  
 }
-#page2{
-    height: 100vh;
-    width: 100%;
+
+#navbar {
+  height: 80px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  position: fixed;
+  z-index: 99;
+  background: transparent;
+  backdrop-filter: blur(3px);
 }
-#navbar{
+#fakenav{
     height: 80px;
     width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    position: fixed;
+}
+
+#left {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0rem 1.5rem;
+}
+
+#navbar #background {
+  height: 2rem;
+  width: 5rem;
+  border-radius: 25px;
+  background-color: white;
+  position: absolute;
+  top: 22px;
+  left: 0;
+  opacity: 0;
+}
+
+#MID {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-left: 20rem;
+}
+
+#MID a {
+  text-decoration: none;
+  text-transform: capitalize;
+  color: black;
+  font-size: 20px;
+  position: relative;
+}
+
+#right {
+  padding: 0rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+#right i {
+  font-size: 30px;
+}
+
+#right i:hover {
+  background-color: rgb(255, 255, 255);
+  padding: 0.3rem;
+  transform: scale(1.1);
+  border-radius: 5px;
+  transition: all 0.4s ease-in-out;
+}
+
+#page1 {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#page1 video{
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    z-index: 2;
+    object-fit: cover;
+}
+
+#content-container{
+position: relative;
+z-index: 3;
+display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#content-container h1{
+    font-size: 40px;
+    font-family: futura;
+    text-transform: uppercase;
     
 }
-#left{
-   display: flex;
-   align-items: center;
-   justify-content: flex-start;
-   padding: 0rem 1.5rem;
+#content-container h1 span{
+    color: rgb(255, 255, 255);
+}
+
+#content-container p{
+    height: 8rem;
+    width: 30rem;
+    font-size: large;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 3rem;
+    color: wheat;
+}
+.imagecontainer{
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+    box-shadow: 2px 2px 40px 0px rgb(0, 255, 200);
+}
+.imagecontainer img{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+}
+#page2 {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 
 }
-#navbar #background{
-    height: 2rem;
-    width: 5rem;
-    border-radius: 25px;
-    background-color: white;
-    position: absolute;
-    top: 22px;
-    left: 0;
-    opacity: 0;
+#content-wrapper{
+  height: 90%;
+  width: 80%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
-#MID{
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    gap: 1rem;
-    margin-left:20rem;
+
+.card{
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+  background-color: #fff;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 2rem;
 }
-#MID a{
-text-decoration: none;
-text-transform: capitalize;
-color: black;
-font-family: 20px;
-position: relative;
+.card video{
+  height: 90%;
+  width: 100%;
+  object-fit: cover;
+  object-position: top;
+  border-top-left-radius:15px ;
+  border-top-right-radius:15px ;
 }
-#right{
-    padding: 0rem 1.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+#page2 button{
+  height: 4rem;
+  width: 4rem;
+  font-size: xx-large;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 22;
+  border: none;
+  background: none;
 }
-#right i{
-    font-size: 30px;
+#page2 button:hover{
+  background-color: white;
+  transition: all 1s  ease-in-out;
+}
+#prev{
+  left: 5%;
+}
+#next{
+  right:5%;
+}
+#content-wrapper h1{
+  margin-top: .5rem;
+}
+#content-wrapper a{
+  margin-top: 0.4rem;
+}
+section{
+  height: 6rem;
+  width: 100%;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+section h1{
+  font-size: 3rem;
+  font-family: futura;
+  text-transform: uppercase;
+  text-decoration: underline;
 }
