--- a/style.css
+++ b/style.css
@@ -9,15 +9,9 @@ html,
 body {
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
-}
-body{
-    background-color: #dadada;
 }
 #main {
-  height: 100vh;
-  width: 100%;
-  
+  overflow: hidden;
 }
 
 #navbar {
@@ -150,8 +144,6 @@ display: flex;
   display: flex;
   align-items: center;
   justify-content: center;
-  
-
 }
 #content-wrapper{
   height: 90%;
@@ -172,6 +164,7 @@ display: flex;
   display: flex;
   flex-direction: column;
   padding-bottom: 2rem;
+  transition: all 0.5s ease-in-out;
 }
 .card video{
   height: 90%;
@@ -181,6 +174,7 @@ display: flex;
   border-top-left-radius:15px ;
   border-top-right-radius:15px ;
 }
+
 #page2 button{
   height: 4rem;
   width: 4rem;
@@ -222,3 +216,27 @@ section h1{
   text-transform: uppercase;
   text-decoration: underline;
 }
+.marque{
+  animation: infinitescroller 15s infinite linear;
+  height: 100%;
+  width: 100%;
+    display: flex;
+  gap: 10rem;
+  align-items: center;
+  flex-shrink: 0;
+  text-decoration: none;
+  white-space: nowrap; 
+  margin: 0;
+}
+.marque h1{
+  text-decoration: none;
+}
+
+ @keyframes infinitescroller {
+  0%{
+    transform: translateX(100%);
+  }
+  100%{
+    transform: translateX(-100%);
+  }
+} 
